--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 :root {
-	font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+	font-family: 'Fira Sans Extra Condensed', sans-serif;
 	font-size: 16px;
 	line-height: 1;
 	font-weight: 500;
@@ -17,7 +17,8 @@
 	--black-light: #173d77;
 	--pink: #da2f68;
 	--orange: #f89e00;
-	--gradient: linear-gradient(98.37deg, #e785d9 0.99%, #6d6fe9 100%);
+	--gradient: linear-gradient(98.37deg, #2488FF 0.99%, #00479B 100%);
+	--gradient2: linear-gradient(98.37deg, var(--black3) 0.99%, var(--black-lighter) 100%);
 }
 
 * {
